feat: add DTOs and repositories for medical entities