@@ -2,16 +2,20 @@ package com.medx.beta.service.impl;
 
 import com.medx.beta.dto.PacienteRequest;
 import com.medx.beta.dto.PacienteResponse;
+import com.medx.beta.dto.PersonaRequest;
+import com.medx.beta.dto.PersonaResponse;
 import com.medx.beta.exception.NotFoundException;
 import com.medx.beta.model.Paciente;
+import com.medx.beta.model.Persona;
 import com.medx.beta.repository.PacienteRepository;
+import com.medx.beta.repository.PersonaRepository;
 import com.medx.beta.service.PacienteService;
+import com.medx.beta.service.PersonService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,67 +23,73 @@ import java.util.stream.Collectors;
 public class PacienteServiceImpl implements PacienteService {
 
     private final PacienteRepository pacienteRepository;
+    private final PersonaRepository personaRepository;
+    private final PersonService personService;
 
     @Override
     @Transactional(readOnly = true)
-    public List<PacienteResponse> getAll() {
-        return pacienteRepository.findAllActivos().stream().map(this::toResponse).collect(Collectors.toList());
+    public List<PacienteResponse> findAll() {
+        return pacienteRepository.findAll().stream()
+                .map(this::toResponse)
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public PacienteResponse getById(Integer id) {
-        Paciente paciente = pacienteRepository.findByPacienteIdAndEstaActivoTrue(id)
-                .orElseThrow(() -> new NotFoundException("Paciente no activo con id: " + id));
+    public PacienteResponse findById(Long id) {
+        Paciente paciente = pacienteRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Paciente no encontrado"));
         return toResponse(paciente);
     }
 
     @Override
-    public PacienteResponse create(PacienteRequest pacienteRequest) {
+    public PacienteResponse create(PacienteRequest request) {
+        Persona persona = new Persona();
+        applyPersona(persona, request.persona());
+        Persona savedPersona = personaRepository.save(persona);
         Paciente paciente = new Paciente();
-        paciente.setPrimerNombre(pacienteRequest.getPrimerNombre());
-        paciente.setSegundoNombre(pacienteRequest.getSegundoNombre());
-        paciente.setPrimerApellido(pacienteRequest.getPrimerApellido());
-        paciente.setSegundoApellido(pacienteRequest.getSegundoApellido());
-        paciente.setFechaNacimiento(pacienteRequest.getFechaNacimiento());
-        paciente.setDomicilio(pacienteRequest.getDomicilio());
-        Paciente saved = pacienteRepository.save(paciente);
-        return toResponse(saved);
+        paciente.setPersona(savedPersona);
+        paciente.setTipoSeguro(request.tipoSeguro());
+        return toResponse(pacienteRepository.save(paciente));
     }
 
     @Override
-    public PacienteResponse update(Integer id, PacienteRequest pacienteRequest) {
-        Paciente existente = pacienteRepository.findByPacienteIdAndEstaActivoTrue(id)
-                .orElseThrow(() -> new NotFoundException("Paciente no activo con id: " + id));
-        existente.setPrimerNombre(pacienteRequest.getPrimerNombre());
-        existente.setSegundoNombre(pacienteRequest.getSegundoNombre());
-        existente.setPrimerApellido(pacienteRequest.getPrimerApellido());
-        existente.setSegundoApellido(pacienteRequest.getSegundoApellido());
-        existente.setFechaNacimiento(pacienteRequest.getFechaNacimiento());
-        existente.setDomicilio(pacienteRequest.getDomicilio());
-        Paciente saved = pacienteRepository.save(existente);
-        return toResponse(saved);
+    public PacienteResponse update(Long id, PacienteRequest request) {
+        Paciente paciente = pacienteRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Paciente no encontrado"));
+        Persona persona = paciente.getPersona();
+        applyPersona(persona, request.persona());
+        personaRepository.save(persona);
+        paciente.setTipoSeguro(request.tipoSeguro());
+        return toResponse(pacienteRepository.save(paciente));
     }
 
     @Override
-    public void deleteById(Integer id) {
-        Paciente existente = pacienteRepository.findByPacienteIdAndEstaActivoTrue(id)
-                .orElseThrow(() -> new NotFoundException("Paciente no activo con id: " + id));
-        pacienteRepository.desactivarPorId(existente.getPacienteId());
+    public void delete(Long id) {
+        Paciente paciente = pacienteRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Paciente no encontrado"));
+        pacienteRepository.delete(paciente);
+    }
+
+    private void applyPersona(Persona persona, PersonaRequest request) {
+        persona.setPrimerNombre(request.primerNombre());
+        persona.setSegundoNombre(request.segundoNombre());
+        persona.setPrimerApellido(request.primerApellido());
+        persona.setSegundoApellido(request.segundoApellido());
+        persona.setTipoDocumento(request.tipoDocumento());
+        persona.setNumeroDocumento(request.numeroDocumento());
+        persona.setFechaNacimiento(request.fechaNacimiento());
+        persona.setGenero(request.genero());
+        persona.setNumeroTelefono(request.numeroTelefono());
+        persona.setUrlFotoPerfil(request.urlFotoPerfil());
     }
 
     private PacienteResponse toResponse(Paciente paciente) {
-        PacienteResponse dto = new PacienteResponse();
-        dto.setPacienteId(paciente.getPacienteId());
-        dto.setPrimerNombre(paciente.getPrimerNombre());
-        dto.setSegundoNombre(paciente.getSegundoNombre());
-        dto.setPrimerApellido(paciente.getPrimerApellido());
-        dto.setSegundoApellido(paciente.getSegundoApellido());
-        dto.setFechaNacimiento(paciente.getFechaNacimiento());
-        dto.setDomicilio(paciente.getDomicilio());
-        dto.setEstaActivo(paciente.getEstaActivo());
-        dto.setFechaCreacion(paciente.getFechaCreacion());
-        dto.setFechaActualizacion(paciente.getFechaActualizacion());
-        return dto;
+        PersonaResponse persona = personService.findById(paciente.getPersona().getId());
+        return new PacienteResponse(
+                paciente.getId(),
+                persona,
+                paciente.getTipoSeguro()
+        );
     }
 }
